Updated height for Ministry team photos to fix squished picture look.

--- a/htdocs/assets/css/ministry.css
+++ b/htdocs/assets/css/ministry.css
@@ -100,7 +100,7 @@ a.teams {
 .photo {
     margin-top: 10pt;
     width: 400px;
-    height: 300px;
+    /*height: 300px;*/
 }
 
 .ministry-name {
